navidrome-app/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome-app
  namespace: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels: 
        app: navidrome
    spec:
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-nfs
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-nfs-data
      containers:
        - name: navidrome-app
          image: deluan/navidrome:latest
          readinessProbe:
            httpGet:
              path: /
              port: 4533
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
          ports:
            - containerPort: 4533
