navidrome-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: navidrome
  namespace: navidrome
spec: 
  ingressClassName: traefik
  rules:
    - host: navidrome.home.lan
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend: 
              service: 
                name: navidrome
                port: 
                  number: 80
